LMDpro - AI-Powered eLearning
LMDpro - AI-Powered Leadership & Management Platform

LMDpro is an advanced SaaS solution that leverages artificial intelligence to enhance leadership and management development. Key features include Google OAuth integration, real-time AI agent collaboration, interactive podcast library, and multilingual support with RTL capabilities. With a modern tech stack and AWS-ready deployment setup, LMDpro promises robust security, seamless user experience, and powerful growth tools for professionals and organizations.

What's new:
•  Upgraded to the latest tech stack versions
•  Enhanced user interface with theming and internationalization
•  Added sophisticated audio controls for podcasts
•  Comprehensive documentation for easy setup and deployment
•  Optimized SEO for increased visibility and reach

Perfect for enterprises aiming for accelerated growth and excellence in leadership.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2022",
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "ES2022"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -17,6 +17,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "forceConsistentCasingInFileNames": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "plugins": [
       {
         "name": "next"
@@ -34,9 +43,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/Study/EducationalMaterial/Quizzes/04_Advanced_Leadership_Theories_for_Navigating_Ambiguity_Quiz.md",
-    "src/Study/EducationalMaterial/Quizzes/05_Corporate_Governance_Ethical_Leadership_at_Senior_Levels_Quiz.md",
-    "src/types/wav.d.ts"
+    "auth.ts",
+    "auth.config.ts",
+    "middleware.ts"
   ],
   "exclude": [
     "node_modules"
